--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "DeepLearningTutorials"]
-	path = DeepLearningTutorials
+[submodule "notebooks/DeepLearningTutorials"]
+	path = notebooks/DeepLearningTutorials
 	url = git://github.com/lisa-lab/DeepLearningTutorials.git
